--- a/index.css
+++ b/index.css
@@ -3,11 +3,18 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
 h1{
     text-align: center;
 }
 
-div{
+.container > div{
     margin: 30px;
     padding: 20px;
     border: solid 1px black;
@@ -41,4 +48,9 @@ button{
 
 div > *{
     margin: 10px;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
